# pliron-tensor

./: Cargo.toml  run_ci.sh
.github/workflows/: ci.yml
src/: attributes.rs  lib.rs  mod.rs  op_interfaces.rs  ops.rs  types.rs
src/cf/: ops.rs
src/memref/: conversions.rs  descriptor.rs  mod.rs  op_interfaces.rs  ops.rs  type_interfaces.rs  types.rs
src/tensor/: attributes.rs  conversions.rs  mod.rs  op_interfaces.rs  ops.rs  runtime.rs  runtime_utils.rs  types.rs
tests/: memref_conversions.rs  tensor_conversions.rs
