[package]
name = "pliron-tensor"
version = "0.1.0"
edition = "2024"

[dependencies]
pliron = { git = "https://github.com/vaivaswatha/pliron.git" }
pliron-llvm = { git = "https://github.com/vaivaswatha/pliron.git" }
pliron-common-dialects = { git = "https://github.com/vaivaswatha/pliron-common-dialects.git" }
thiserror = "2"

[dev-dependencies]
expect-test = "1"